2012-10-19  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_fake.c: add missing declaration of msg->sms.coding when
      an MO message is received and forwarded to the core layer.
      
2012-10-14  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document that we can use SMPP v5.0 
      bind connections too now.
    * gw/smsc/smpp_pdu_opt.def: add the TLVs added in SMPP v5.0.
    * gw/smsc/smpp_pdu.def: add optional TLVs to the the SMPP v3.[3|4] PDUs
      and some new PDUs as defined in SMPP v5.0.
    * gw/smpp_pdu.h: added a couple of NPI values defined in SMPP v5.0.
    * gw/smsc_smpp.c: add basic support for SMPP v5.0 handling.
    This patchset incorporates the new parts from the SMPP v5.0 spec into
    the codebase, without being intrusive to the current default behaviour.
    
2012-10-14  Stipe Tolj  <stolj at kannel.org>
    * gwlib/http.[ch]: add function http_request_url() to gain access to
      the used URL of the transaction, i.e. this will be required for HTTP 
      RESTful implementations of OneAPI v2.0 in the SMSC HTTP module for 
      the receiving function callback to distinguish MO and DLRs.
      
2012-10-12  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide.xml: adding documentation part for new SMSC type 'GSMA 
      OneAPI v1.0 ParlayX SMS SOAP'.
    * gw/smscconn_p.h, gw/smscconn.c: add new SMSC type create function
      smsc_soap_parlayx_create(), depending on gSOAP support.
    * gw/smsc/smsc_soap_parlayx.c: implement two variants of 'smsc = parlayx',
      for the Ericsson SDP 'system-type = ericsson-sdp' and the GSMA OneAPI
      v1.0 'system-type = oneapi-v1', both based on ParlayX 2.1 SOAP service.
    * soap/Makefile.in: generic Makefile for SOAP services implemented via
      gSOAP created C headers and sources.
    * soap/service/parlayx/parlayx_sms_send_service_2_1_wrapper.h: wrapper
      for the gSOAP wsdl2h created header file, to include WS-Security via
      wsse imports.